--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
         "toc": "i18next-resources-for-ts interface -i ./locales/en -o ./locales/resources.d.ts"
     },
     "dependencies": {
-        "@discord-player/extractor": "^4.5.1",
+        "@discord-player/extractor": "^7.1.0",
         "config": "^3.3.12",
-        "discord-player": "^6.7.1",
-        "discord-player-deezer": "2.0.0",
-        "discord.js": "^14.16.1",
+        "discord-player": "^7.1.0",
+        "discord-player-deezer": "2.3.0",
+        "discord.js": "^14.17.3",
         "dotenv": "^16.4.5",
         "i18next": "^23.14.0",
         "i18next-fs-backend": "^2.3.2",
-        "mediaplex": "^0.0.9",
+        "mediaplex": "^1.0.0",
         "node-os-utils": "^1.3.7",
         "pino": "^9.4.0",
         "ts-node": "^10.9.2"
@@ -50,5 +50,6 @@
     },
     "optionalDependencies": {
         "pino-pretty": "^11.2.2"
-    }
+    },
+    "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
