--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@discord-player/extractor": "^7.1.0",
         "config": "^3.3.12",
         "discord-player": "^7.1.0",
-        "discord-player-deezer": "2.3.1-dev.2",
+        "discord-player-deezer": "2.5.0-beta.1",
         "discord.js": "^14.17.3",
         "dotenv": "^16.4.5",
         "i18next": "^23.14.0",
